# context-shrink

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
claude/bonsai/.claude-plugin/: plugin.json
claude/contextshrink/: README.md
claude/contextshrink/skills/contextshrink/: SKILL.md
copilot/bonsai-vscode/: README.md  package-lock.json  package.json
copilot/contextshrink-vscode/: .vscodeignore  README.md  package.json
copilot/contextshrink-vscode/src/: contextshrink.smoke.test.ts  contextshrink.ts  extension.ts
docs/: output-schema.md
plugins/bonsai/.codex-plugin/: plugin.json
plugins/contextshrink/skills/contextshrink/: SKILL.md
plugins/contextshrink/skills/contextshrink/scripts/: run_contextshrink.sh
src/: budget.rs  cache.rs  formatter.rs  main.rs  parser.rs  walker.rs
tests/: cli_integration.sh  cli_output_smoke.sh
tests/golden/: changed-since-summary.txt  changed-since.xml  completions-snippets.txt  context.json  dry-run.txt  file-hashes.xml  quiet.xml
