[package]
name = "contextshrink"
version = "0.1.0"
edition = "2021"
description = "Local-first AST context compressor for LLM ingestion"
license = "MIT"

[dependencies]
anyhow = "1.0"
arboard = "3.4"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
tiktoken-rs = "0.6"
tree-sitter = "0.22"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
